added DoubleArray.linspace()